[package]
name = "wordle-api"
version = "0.1.0"
edition = "2021"
description = "A Wordle API"
authors = [
    "Obi Fortune <gabrielobi.of@gmail.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.8.0", features = ["attributes"] }
chrono = "0.4.22"
serde = { version = "1.0", features = ["derive"] }
tide = "0.16.0"
uuid = { version = "^0.8", features = ["v4"] }
